--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ a.active,a:hover{
     nav ul li{
         display: block;
         margin: 50px 0;
+        margin: 50px 0;
         line-height: 30px;
      } 
      nav ul li a{
